[package]
name = "bj_basic_strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
proc_macros = { git = "https://github.com/lkbhargav/proc_macros.git", rev = "2cd927f450883b2a1cf86fd230169e847aef132d" }
syn = "2.0.100"
rand = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
