[package]
name = "bj_basic_strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
proc_macros = { git = "https://github.com/lkbhargav/proc_macros.git", rev = "bfb2bb1a75262c39e692986efa40ea4399ee20de" }
syn = "2.0.101"
rand = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
